--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,4 +1,4 @@
-.login {
+/* .login {
   width: 90%;
   max-width: 40rem;
   margin: 2rem auto;
@@ -43,9 +43,7 @@
   background: #fbdada;
 }
 
-.actions {
-  text-align: center;
-}
+
 
 @media (min-width: 768px) {
   .control {
@@ -53,4 +51,13 @@
     flex-direction: row;
   }
 
+} */
+.login {
+  width: 90%;
+  max-width: 40rem;
+  margin: 2rem auto;
+  padding: 2rem;
+}
+.actions {
+  text-align: center;
 }
